<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/top_app_bar"
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imgApp"/>

        <ImageView
            android:id="@+id/imgApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/m_inicio_mi_recetario_de_cocina"
            android:scaleType="centerCrop"
            android:src="@drawable/recetario1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar"
            app:layout_constraintBottom_toTopOf="@id/contentLogin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/imgApp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/presentacionApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_aplicacion_dedicada_a_la_elaboracion"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/loginForm"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/layout_border"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/presentacionApp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:hint="@string/m_usuario"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/passwordLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="15"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:hint="@string/m_contrasena"
                    app:layout_constraintTop_toBottomOf="@id/userTextInput"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordValue"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="15"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnInicioSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/m_btn_iniciar_sesion"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>